# CS2201-project2

./: CMakeLists.txt  DNA_Strand.cpp  DNA_Strand.h  DNAtest.cpp  README.md
